# rc_visard_turtlebot_tutorial

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  install_turtlebot.sh  install_turtlebot_docker.sh  package.xml
cfg/: map_generation.rviz  navigation_app.rviz  rc_visard_costmap_params.yaml
docker/: .install_turtlebot_docker.sh  .turtlebot_entrypoint.sh  keyop_teleop.sh  ps3_teleop.sh  run_script.sh  start_rc_visard.sh  turtlebot_launch.sh
launch/: mobile_base.launch  octomap_mapping.launch  ps3_teleop.launch  rc_visard_turtlebot_docker_tutorial.launch  rc_visard_turtlebot_tutorial.launch  turtlebot_driver.launch
robots/: kobuki_hexagons_rc_visard_160.urdf.xacro
scripts/: pose_to_tf.py  reset_slam_and_load_map.py  save_trajectory_as_tf.py
